lesson2/css/small.css
.principles p {
    margin-top: -20px;
    border: 1px solid black;
    border-top: 0.2px solid black;
    background: whitesmoke;
    padding: 10px;
    line-height: 150%;
}

h3 {
    border: 1px solid black;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    padding-top: 5px;
    padding-bottom: 5px;

    background: yellow;
    text-align: center;
}

.principles img {
    margin-top: 5px;
    border: 0.5px solid black;
    width: 100%;
}

